# ele_ds_server

./: .gitignore  CMakeLists.txt  Makefile  log.h  main.c  main.h  readme.md
client/: client.c  client.h
command/: command.c  command.h
common/: common.c  common.h
resource/: ed25519-private.pem  ed25519-public.pem  libcjson-dev_1.7.15-1_amd64.deb  libcjson1_1.7.15-1_amd64.deb  test.c
server/: server.c  server.h
users/: users.c  users.h
weather/: weather.c  weather.h
